# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG   = fixed a bug that was crashing

Apr 03, 2001
	swapped endian-ness for pixels_alpha()

Mar 29, 2001
	fixed key.set_mods() (thanks rubysdl)
	rework setup scripts for 1.0 release
	relaxed sdl version checking

Mar 21, 2001
	initial support for compiling on mac
	fixed odd case with locking subsurfaces

Mar 20, 2001
	font and mixer now properly auto quit()

Mar 19, 2001
	Surfaces won't crash after display module is quit [BUG]

Mar 18, 2001
	friendlier type casting in surfarray (for some compilers)
	removed non-ANSI C code

Mar 17, 2001
	pygame.Surface is smarter with SRCALPHA flag
	fixed several small bugs in surfarray [BUG]
	new surfarray example and tutorial

Mar 16, 2001
	Fixed memory leak in Rect constructor
	Fixed improper exception in display.update(with_4_args)

Feb 15, 2001
	calling Sound.play() will make sure the channel
		that gets selected has volume set to full

Feb 14, 2001
	fixed Surface.set_colorkey() with no args [BUG]

Feb 13, 2001
	fixed return rect from line drawing routines
	small fix when drawing horizontal lines

pygame-09
Feb 12, 2001
	added NOFRAME to pygame.constants

Feb 11, 2001
	workaround python parsing error for pygame.time.delay(-1)

Feb 9, 2001
	setting rectangle width/height/size changes the
		right/bottom edges (instead of top/right) [BREAK]

Feb 6, 2001
	fixed the music unpause() function

Jan 31, 2001
	functions taking RGBA colors can also accept mapped ints

Jan 30, 2001
	added draw.lines()

Jan 29, 2001
	extremely revamped surface locking mechnisms
	new Surface.subsurface for shared surfaces

Jan 25, 2001
	added the draw module, with clipped line function
	added alpha routines in surfarray module
	more locking checks for surfarray
	make extra sure all of SDL is shutdown properly

Jan 24, 2001
	funcs that need locked surfaces will temporarily lock them